samples/express/views/errors/no-super-block.njk
{% extends "no-super-block-parent.njk" %}
{% block content %}{{ super() }}{% endblock %}
